# AviationEmergencyLocations

./: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.local  LICENSE.md  README.md  deployment.yml  launch.json  notes.md  package.json  svelte.config.js
applications/path-finding/: Cargo.toml
applications/path-finding/src/: drawing.rs  lib.rs  main.rs  main_dubin.rs  oldsim.rs  sim.rs
applications/path-finding/src/data/: aircraft.rs  location.rs  mod.rs  output.rs
applications/path-finding/src/dubin/: mod.rs
applications/path-finding/src/dubin/structs/: arc.rs  circle.rs  mod.rs  path.rs  tangent.rs
data/: aircraft.yml  locations.yml
elsa/: Cargo.toml  build.sh
elsa/src/: calculator.rs
elsa/src/data/: location.rs  parser.rs
elsa/src/dubin/: ccc.rs  csc.rs
elsa/src/dubin/structs/: circle.rs  directed_point.rs
src/: app.postcss
src/lib/: i18n.js  stores.js  units.js
src/lib/components/: AircraftCardContent.svelte  Disclaimer.svelte  Head.svelte  HeadroomThresholdDropdowns.svelte  HumanPresenceDropdowns.svelte  IconLabelled.svelte  Labelled.svelte  Localized.svelte  Modal.svelte  SafetyDisclaimerModal.svelte  ToolButton.svelte
src/lib/data/: criticalArea.json  generated.json  routes.json
src/lib/locale/: en.json
src/lib/simulation/: elsa.js  worker.js
src/routes/: aircrafts.svelte  imprint.svelte  index.svelte  profile.svelte
src/routes/guide/: __layout.svelte  aircraft.svelte  devnote.svelte  finalWords.svelte  index.svelte  locations.svelte  remarks.svelte  toc.svelte
src/routes/map/: __layout.svelte
src/routes/tool/: __layout.svelte  index.svelte  route.svelte
static/data/: aircrafts.yml  locations.yml
tools/height-checker/: Cargo.toml
tools/height-checker/src/: main.rs
web-app/: .gitignore  package.json  svelte.config.js
web-app/elsa/: Cargo.toml
web-app/elsa/src/: calculator.rs  helpers.rs  lib.rs
web-app/src/: app.postcss
web-app/src/lib/: AircraftRange.svelte  AltitudeSlider.svelte  CriticalArea.svelte  IconLabelled.svelte  Line.svelte  LocationCard.svelte  LocationLines.svelte  LocationRanges.svelte  SatelliteImagery.svelte  constants.js  elsa.js  map.js  stores.js  units.js  worker.js
web-app/src/routes/: __layout.svelte  aircrafts.svelte  (+3 more)
(+82 files in other folders)
