[package]
name = "elsa"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uom = { version = "0.31", features = ["use_serde"] }
geo = "0.18"
geojson = { version = "0.22", features = ["geo-types"] }
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde", "wasm-bindgen"] }
strum = { version = "0.21", features = ["derive"] }

log = "0.4"
js-sys = "0.3.53"
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
console_log = "0.2"

svg = "0.10"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
