[package]
name = "path-finding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uom = "0.31"
geo = "0.18"
geojson = { version = "0.22.2", features = ["geo-types"] }

#image = "0.23"
#imageproc = "0.22"
#rusttype = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde", "wasm-bindgen"] }

#rayon = "1.5"
strum = { version = "0.21", features = ["derive"] }

wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"

log = "0.4"
console_log = "0.2"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
